--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -25,7 +25,7 @@
       </div>
     </div>
 
-    <button type="button" [disabled]="!tkdForm.form.valid" class="ui icon button btn-success" (click)="sentMessage()">sent message<i class="trash outline icon"></i>
+    <button type="submit" [disabled]="!tkdForm.form.valid" class="ui icon button btn-success" (click)="sentMessage()">sent message<i class="trash outline icon"></i>
     </button>
 
   </form>
