--- a/src/app/components/chat-group/chat-group.component.html
+++ b/src/app/components/chat-group/chat-group.component.html
@@ -1,2 +1,2 @@
 
-<button type="button" class="btn btn-default" (click) = "filterGroup($event)" [style.background-color]="getStyle()" >{{ group.name }}</button>
+<button type="button" class="btn btn-default" (click) = "filterGroup($event)" [style.background-color]="getStyle()" >{{ model.description }}</button>
