--- a/src/app/components/chat-item/chat-item.component.html
+++ b/src/app/components/chat-item/chat-item.component.html
@@ -1,4 +1,4 @@
 <div class="row">
-    <p class="text-left">{{ message.from }},{{ message.date }}<br> {{ message.message }}
+    <p class="text-left col-xs-9 col-sm-9 col-md-9 col-lg-9">{{ model.from }},{{ model.date }}<br> {{ model.message }}
     </p>
 </div>
